--- a/.envExample
+++ b/.envExample
@@ -1,3 +1,5 @@
 EMAIL_USER = 'contact@geekyshows.com'
 EMAIL_PASS = '123456'
 EMAIL_FROM = 'contact@geekyshows.com'
+BASE_URL = 'http://localhost:8000/'
+FRONT_END_BASE_URL = 'https://srivarisuvarnasubikshaahomes.com'
