--- a/.envExample
+++ b/.envExample
@@ -3,3 +3,4 @@ EMAIL_PASS = '123456'
 EMAIL_FROM = 'contact@geekyshows.com'
 BASE_URL = 'http://localhost:8000/'
 FRONT_END_BASE_URL = 'https://srivarisuvarnasubikshaahomes.com'
+BACK_END_BASE_URL = 'https://admin.srivarisuvarnasubikshaahomes.com'
